Fixate paginators (Shifts) & change app background

--- a/src/app/components/app-component/app.component.css
+++ b/src/app/components/app-component/app.component.css
@@ -1,15 +1,13 @@
 .page-container{
-    background-color: #F6F6F6;
+    background-color: #d3dde9;
     width: 100%;
+    height: 100%;
 }
 
 footer{
+    position: absolute;
+    bottom: 0;
     height: 40px;
     width: 100%;
     background-color: white;
-    display: block;
-}
-
-h1:hover{
-    cursor: pointer;
 }
