--- a/src/app/components/shift-component/shifts-view/shifts-view.component.css
+++ b/src/app/components/shift-component/shifts-view/shifts-view.component.css
@@ -15,25 +15,25 @@
     margin-right: 15px;
 }
 
-mat-paginator{
-    margin-top: 10%;
-}
+#table-wrapper{
+    height: calc(100vh - 305px);
+    max-height: calc(100vh - 305px);
+    overflow: auto;
 
-::ng-deep #skill-button {
-    background-color: white;
 }
 
 ::ng-deep #shifts-nav-bar #shift-button {
-    background-color:#F6F6F6;
-   
+    background-color: #d3dde9;
+    color: black;
+    padding: 35px;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+
 }
-::ng-deep #shift-type-button {
+
+::ng-deep #skill-button, ::ng-deep #shift-type-button, ::ng-deep #shift-group-button {
     background-color: white;
+    color: black;
+    padding: 35px;
+
 }
-
-::ng-deep #shift-group-button {
-    background-color: white;
-}
-
-
-
