--- a/src/app/components/shift-component/sidenav-shift/sidenav-shift.component.css
+++ b/src/app/components/shift-component/sidenav-shift/sidenav-shift.component.css
@@ -4,3 +4,7 @@ button {
     height: 400px;
   }
 
+
+.example-button-row{
+  background-color: white;
+}
