--- a/src/app/components/skill-view/skill-view.component.css
+++ b/src/app/components/skill-view/skill-view.component.css
@@ -15,26 +15,27 @@
     margin-right: 15px;
 }
 
-mat-paginator{
-    margin-top: 10%;
+#table-wrapper{
+    height: calc(100vh - 305px);
+    max-height: calc(100vh - 305px);
+    overflow: auto;
+
 }
 
 ::ng-deep #skill-nav-bar #skill-button {
-    background-color: #F6F6F6;
-    color: black;
+    background-color: #d3dde9;
+    color: #1a3d66;
+    padding: 35px;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
-::ng-deep #shift-button {
+::ng-deep #shift-button, ::ng-deep #shift-type-button, ::ng-deep #shift-group-button {
     background-color: white;
-    color: black;
-}
-
-::ng-deep #shift-type-button {
-    background-color: white;
-    color: black;
-}
-
-::ng-deep #shift-group-button {
-    background-color: white;
-    color: black;
+    color: #1a3d66;
+    padding: 35px;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
 }
